# MiPushFakeForRiru

./: .gitignore  README.md  gradle.properties  module.gradle
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  hook.cpp  logging.h  main.cpp
module/src/main/cpp/include/: logging.h
template/magisk_module/: README.md  customize.sh  post-fs-data.sh  riru.sh  uninstall.sh
